# actions-hello-world

./: .travis.yml  README.md  dismiss-oob.js  helloworld.py  multiprocess-hw.py  pyproject.toml  ssd.js  ssd.mjs  totp.mjs  totp.py
.github/workflows/: helloworld.yaml  pushwiki.yaml  pyinstaller.yaml  pypi.yaml  totp.yml
src/: helloworld.py  helloworld.spec  test.py
src/helloworld/: __main__.py
wiki/: README.md  TEST.md
