[project]
name = "helloworld_jay0lee"
dynamic = [
    "dependencies",
    "version",
]
authors = [
    { name="Jay Lee", email="jay0lee@gmail.com" },
]
description = "Hello world testing"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = {text = "Apache License (2.0)"}
license-files = ["LICEN[CS]E*"]

[project.scripts]
helloworld = "helloworld.__main__:main"

[project.urls]
Homepage = "https://github.com/GAM-team/actions-hello-world"
Issues = "https://github.com/GAM-team/actions-hello-world/issues"

[tool.hatch.version]
path = "src/helloworld/__main__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/helloworld"]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["src/requirements.txt"]

[build-system]
requires = [
    "hatchling",
    "hatch-requirements_txt",
]
build-backend = "hatchling.build"
